<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A Spinner Test</string>
    <string name="age_cat">Age:</string>
    <string name="action_settings">Settings</string>
    <string name="weight_cat">Weight:</string>
    <string name="fav_no">Favourite Number:</string>
    <string name="button_send">Send</string>
    <string name="fav_no_hint">Enter a number</string>
    <string name="title_activity_notification_receiver">NotificationReceiverActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_notif">Create notification</string>
    <string name="notif">This is a notification</string>
    <string name="start_service">Start</string>
    <string name="stop_service">Stop</string>
    <string name="send_msg">Send message</string>
    <string name="start_alarm">Start alarm</string>
    <string name="stop_alarm">Stop alarm</string>
    <string name="period_svc_start">Start period svc</string>
    <string name="period_svc_stop">Stop period svc</string>
    <string name="start_CPU_wake">Start CPU Wake</string>
    <string name="stop_CPU_wake">Stop CPU Wake</string>

</resources>
