<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
    <TextView
        android:id="@+id/ageCat"
        android:text="@string/age_cat"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/ageSpinner"
        android:layout_alignBottom="@id/ageSpinner"
        android:gravity="center"
        android:textSize="16sp"/>

    <Spinner
        android:id="@id/ageSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/ageCat"/>

    <TextView
        android:id="@+id/weightCat"
        android:text="@string/weight_cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ageCat"
        android:layout_alignRight="@id/ageCat"
        android:layout_alignTop="@+id/weightSpinner"
        android:layout_alignBottom="@id/weightSpinner"
        android:gravity="center"
        android:textSize="16sp"/>

    <Spinner
        android:id="@id/weightSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ageSpinner"
        android:layout_alignLeft="@id/ageSpinner"
        android:layout_alignRight="@id/ageSpinner"/>

    <TextView
        android:id="@+id/favNo"
        android:text="@string/fav_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/weightCat"
        android:layout_alignRight="@id/weightCat"
        android:layout_alignTop="@+id/favNoText"
        android:layout_alignBottom="@id/favNoText"
        android:gravity="center"
        android:textSize="16sp"/>

    <EditText
        android:id="@id/favNoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/weightSpinner"
        android:layout_alignLeft="@id/weightSpinner"
        android:layout_alignRight="@id/weightSpinner"
        android:hint="@string/fav_no_hint"
        android:inputType="number"/>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:paddingTop="20px"
        android:layout_below="@id/favNoText"
        android:layout_alignParentRight="true"
        android:onClick="buttonSend"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonNotif"
        android:text="@string/button_notif"
        android:layout_below="@id/favNoText"
        android:layout_toLeftOf="@id/buttonSend"
        android:onClick="createNotification"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStartSvc"
        android:text="@string/start_service"
        android:layout_below="@id/buttonSend"
        android:layout_toLeftOf="@+id/buttonStopSvc"
        android:onClick="onClickStartSvc"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/buttonStopSvc"
        android:text="@string/stop_service"
        android:layout_below="@id/buttonSend"
        android:layout_toLeftOf="@+id/buttonSendMsg"
        android:onClick="onClickStopSvc"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/buttonSendMsg"
        android:text="@string/send_msg"
        android:layout_below="@id/buttonSend"
        android:layout_alignParentRight="true"
        android:onClick="onClickSendMsg"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStartAlarm"
        android:text="@string/start_alarm"
        android:layout_below="@id/buttonSendMsg"
        android:layout_toLeftOf="@+id/buttonStopAlarm"
        android:onClick="startAlarm"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/buttonStopAlarm"
        android:text="@string/stop_alarm"
        android:layout_below="@id/buttonSendMsg"
        android:layout_alignParentRight="true"
        android:onClick="cancelAlarm"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/periodSvcStart"
        android:text="@string/period_svc_start"
        android:layout_below="@id/buttonStopAlarm"
        android:layout_toLeftOf="@+id/periodSvcStop"
        android:onClick="startPeriodSvc"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/periodSvcStop"
        android:text="@string/period_svc_stop"
        android:layout_below="@id/buttonStopAlarm"
        android:layout_alignParentRight="true"
        android:onClick="stopPeriodSvc"/>

</RelativeLayout>